<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_category_title"
        android:layout_marginTop="@dimen/margin_top_category_title"
        android:layout_marginEnd="@dimen/margin_top_category_title"
        android:text="@string/playing_now"
        android:textColor="@android:color/white"
        android:textSize="@dimen/category_text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_category_description"
        android:layout_marginEnd="@dimen/margin_end_category_description"
        android:text="@string/new_movies_out_now" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress_playing_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_now_playing_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:clipToPadding="false"
        android:paddingStart="@dimen/padding_start_recyclerview"
        android:paddingEnd="@dimen/padding_end_recyclerview" />
</LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_category_title"
        android:layout_marginTop="@dimen/margin_top_category_title"
        android:layout_marginEnd="@dimen/margin_top_category_title"
        android:text="@string/popular"
        android:textColor="@android:color/white"
        android:textSize="@dimen/category_text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_category_description"
        android:layout_marginEnd="@dimen/margin_end_category_description"
        android:text="@string/most_popular_movies" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:visibility="gone"
            android:paddingStart="@dimen/padding_start_recyclerview"
            android:paddingEnd="@dimen/padding_end_recyclerview" />
    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_category_title"
        android:layout_marginTop="@dimen/margin_top_category_title"
        android:layout_marginEnd="@dimen/margin_top_category_title"
        android:text="@string/upcoming_movies"
        android:textColor="@android:color/white"
        android:textSize="@dimen/category_text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_category_description"
        android:layout_marginEnd="@dimen/margin_end_category_description"
        android:text="@string/stay_updated_with_the_lasted_movies" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:clipToPadding="false"
            android:paddingStart="@dimen/padding_start_recyclerview"
            android:paddingEnd="@dimen/padding_end_recyclerview" />
    </LinearLayout>

</LinearLayout>

</androidx.core.widget.NestedScrollView>